Fixed header spacing, scatterplot title

--- a/src/App.css
+++ b/src/App.css
@@ -20,13 +20,20 @@ header {
   background: #002642;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   height: 64px;
-  width: 100vw;
+  width: 100%;
   text-align: left;
   font-size: 32px;
   color: white;
   font-weight: bolder;
   padding-top: 10px;
+}
+
+header span {
   padding-left: 30px;
+}
+
+h3 {
+  margin: 0;
 }
 
 .container {
